...
                <TextView
                    android:text="@string/recipe_label_steps_list"
                    android:textStyle="bold"
                    android:textAppearance="@style/AppTheme.TextAppearance.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <android.support.v7.widget.RecyclerView android:id="@+id/steps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
...
