<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:fitsSystemWindows="true"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="@string/recipe_label_steps_list"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager android:id="@+id/step_pager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</android.support.design.widget.CoordinatorLayout>